# modelpin

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  modelpin.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  modelpin.yml
.modelpin/: baseline-gpt-4o-mini.json
actions/: README.md  action.yml
data/: models.json
docs/: Modelpin-Engineering-Context-Pack.md  PUBLISHING.md  STATUS.md  engine-review-brief.md  fp-measurement.md
docs/launch/: drift-map-launch-assets.md  show-hn-and-x.md
docs/reports/: modelpin-drift-map-1.md
examples/: github-workflow.yml  modelpin.yaml  support_agent.py
examples/calibration/: README.md  classify_topic.json  define_term.json  explain_concept.json  reco_decision.json  summarize_outcome.json  unit_answer.json
examples/drift-suite/: borderline_access.json  (+6 more)
modelpin/: __init__.py  cli.py  config.py  judge.py  models.py  storage.py
reports/: modelpin-report-gpt-4.1-vs-gpt-4o-2026-06-24.json  modelpin-report-gpt-4.1-vs-gpt-4o-2026-06-24.md
scripts/: calibrate_thresholds.py  drift_map.py  fp_measurement.py
tests/: test_cli.py  test_cli_hardening.py  test_common.py  test_config.py  test_detector.py  test_diff.py  test_judge.py  test_models.py  test_provider_google.py  test_provider_openai.py  test_refusal_apostrophe.py  test_replay.py  test_report.py  test_report_suite.py  test_scenarios.py  test_semantic.py  test_storage.py  test_watcher.py
(+51 files in other folders)
