[project]
name = "modelpin"
version = "0.0.1"
description = "Dependabot for AI models — catch model-migration regressions before they hit production."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Samarth Puthraya" }]
keywords = ["llm", "ai", "agents", "regression-testing", "model-pinning", "evals", "ci", "dependabot"]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
providers = ["openai>=1.40", "google-genai>=1.0", "anthropic>=0.34"]
dev = ["pytest>=8", "ruff>=0.5", "black>=24.0"]

[project.urls]
Homepage = "https://modelpin.dev"
Repository = "https://github.com/modelpin/modelpin"

[project.scripts]
modelpin = "modelpin.cli:main"
mp = "modelpin.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["modelpin*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
